Speculativte fix for popout clipping under titlebar

--- a/src/components/popout/_user.scss
+++ b/src/components/popout/_user.scss
@@ -1,11 +1,10 @@
 .theme-dark.popouts .popout.popout-right.no-arrow.no-shadow,
 .theme-dark.popouts .popout.popout-left.no-arrow.no-shadow,
-.theme-dark.popouts .popout.popout-right.no-arrow[style*="top: 0px;"]{
+.theme-dark.popouts .popout.popout-right.no-arrow[style*="top: 32px;"]{
     position: absolute;
     top: 32px !important;
     right: 0 !important;
     left: initial !important;
-    height: 100vh;
     margin: 0;
     transform: none !important;
     animation: 350ms slideinright cubic-bezier(0.1,0.9,0.2,1);
@@ -13,7 +12,7 @@
 
 .theme-dark div[class^="userPopout-"]{
     width: 420px;
-    height: 100vh;
+    height: calc(100vh - 32px);
     background-color: $b1;
     border-radius: 0;
     
